lib/common-music/sa/include/sa.h

EXPORT void _wrap_delete_Balance (Balance *larg1);
EXPORT char *_wrap_Balance_ErrorMessage (Balance *larg1);
EXPORT int _wrap_Balance_Connect (Balance *larg1, char *larg2, void *larg3);
EXPORT DelayLine *_wrap_new_DelayLine_empty ();
EXPORT DelayLine *_wrap_new_DelayLine (float larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_DelayLine (DelayLine *larg1);
EXPORT float *_wrap_DelayLine_Buffer (DelayLine *larg1);
EXPORT long _wrap_DelayLine_GetWritePointerPos (DelayLine *larg1);
EXPORT float _wrap_DelayLine_GetDelayTime (DelayLine *larg1);
EXPORT void _wrap_DelayLine_SetSr (DelayLine *larg1, float larg2);
EXPORT void _wrap_DelayLine_Reset (DelayLine *larg1);
EXPORT void _wrap_DelayLine_SetDelayTime (DelayLine *larg1, float larg2);
EXPORT int _wrap_DelayLine_Set (DelayLine *larg1, char *larg2, float larg3);
EXPORT char *_wrap_DelayLine_ErrorMessage (DelayLine *larg1);
EXPORT Tap *_wrap_new_Tap_empty ();
EXPORT Tap *_wrap_new_Tap (float larg1, DelayLine *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Tap (Tap *larg1);
EXPORT void _wrap_Tap_SetDelayTime (Tap *larg1, float larg2);
EXPORT void _wrap_Tap_SetDelayTap (Tap *larg1, DelayLine *larg2);
EXPORT int _wrap_Tap_Set (Tap *larg1, char *larg2, float larg3);
EXPORT int _wrap_Tap_Connect (Tap *larg1, char *larg2, void *larg3);
EXPORT char *_wrap_Tap_ErrorMessage (Tap *larg1);
EXPORT Tapi *_wrap_new_Tapi_empty ();
EXPORT Tapi *_wrap_new_Tapi (SndObj *larg1, DelayLine *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Tapi (Tapi *larg1);
EXPORT void _wrap_Tapi_SetDelayInput (Tapi *larg1, SndObj *larg2);
EXPORT int _wrap_Tapi_Connect (Tapi *larg1, char *larg2, void *larg3);
EXPORT Comb *_wrap_new_Comb_empty ();
EXPORT Comb *_wrap_new_Comb (float larg1, float larg2, SndObj *larg3, int larg4, float larg5);
EXPORT void _wrap_delete_Comb (Comb *larg1);
EXPORT void _wrap_Comb_SetGain (Comb *larg1, float larg2);
EXPORT int _wrap_Comb_Set (Comb *larg1, char *larg2, float larg3);
EXPORT Allpass *_wrap_new_Allpass_empty ();
EXPORT Allpass *_wrap_new_Allpass (float larg1, float larg2, SndObj *larg3, int larg4, float larg5);
EXPORT void _wrap_delete_Allpass (Allpass *larg1);
EXPORT StringFlt *_wrap_new_StringFlt_empty ();
EXPORT StringFlt *_wrap_new_StringFlt (float larg1, float larg2, SndObj *larg3, SndObj *larg4, int larg5, float larg6);
EXPORT StringFlt *_wrap_new_StringFlt_decay (float larg1, SndObj *larg2, float larg3, SndObj *larg4, int larg5, float larg6);
EXPORT void _wrap_delete_StringFlt (StringFlt *larg1);
EXPORT void _wrap_StringFlt_SetSr (StringFlt *larg1, float larg2);
EXPORT void _wrap_StringFlt_SetDecay (StringFlt *larg1, float larg2);
EXPORT void _wrap_StringFlt_SetFreq (StringFlt *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_StringFlt_SetFdbgain (StringFlt *larg1, float larg2);
EXPORT int _wrap_StringFlt_Set (StringFlt *larg1, char *larg2, float larg3);
EXPORT int _wrap_StringFlt_Connect (StringFlt *larg1, char *larg2, void *larg3);
EXPORT Pluck *_wrap_new_Pluck_empty ();
EXPORT Pluck *_wrap_new_Pluck (float larg1, float larg2, float larg3, SndObj *larg4, float larg5, int larg6, float larg7);
EXPORT Pluck *_wrap_new_Pluck_decay (float larg1, float larg2, SndObj *larg3, float larg4, float larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Pluck (Pluck *larg1);
EXPORT void _wrap_Pluck_RePluck (Pluck *larg1);
EXPORT int _wrap_Pluck_Set (Pluck *larg1, char *larg2, float larg3);
EXPORT void _wrap_Pluck_SetAmp (Pluck *larg1, float larg2, float larg3);
EXPORT VDelay *_wrap_new_VDelay_empty ();
EXPORT VDelay *_wrap_new_VDelay (float larg1, float larg2, float larg3, float larg4, SndObj *larg5, SndObj *larg6, SndObj *larg7, SndObj *larg8, SndObj *larg9, int larg10, float larg11);
EXPORT VDelay *_wrap_new_VDelay_delaytime (float larg1, float larg2, float larg3, float larg4, float larg5, SndObj *larg6, SndObj *larg7, SndObj *larg8, SndObj *larg9, SndObj *larg10, int larg11, float larg12);
EXPORT void _wrap_delete_VDelay (VDelay *larg1);
EXPORT int _wrap_VDelay_Set (VDelay *larg1, char *larg2, float larg3);
EXPORT int _wrap_VDelay_Connect (VDelay *larg1, char *larg2, void *larg3);
EXPORT void _wrap_VDelay_SetMaxDelayTime (VDelay *larg1, float larg2);
EXPORT void _wrap_VDelay_SetDelayTime (VDelay *larg1, float larg2);
EXPORT void _wrap_VDelay_SetVdtInput (VDelay *larg1, SndObj *larg2);
EXPORT void _wrap_VDelay_SetFdbgain (VDelay *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_VDelay_SetFwdgain (VDelay *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_VDelay_SetDirgain (VDelay *larg1, float larg2, SndObj *larg3);
EXPORT Pitch *_wrap_new_Pitch_empty ();
EXPORT Pitch *_wrap_new_Pitch (float larg1, SndObj *larg2, float larg3, int larg4, float larg5);
EXPORT Pitch *_wrap_new_Pitch_semitones (float larg1, SndObj *larg2, int larg3, int larg4, float larg5);
EXPORT void _wrap_delete_Pitch (Pitch *larg1);
EXPORT void _wrap_Pitch_SetPitch (Pitch *larg1, float larg2);
EXPORT void _wrap_Pitch_SetPitch_semitones (Pitch *larg1, int larg2);
EXPORT int _wrap_Pitch_Set (Pitch *larg1, char *larg2, float larg3);
EXPORT SndLoop *_wrap_new_SndLoop_empty ();
EXPORT SndLoop *_wrap_new_SndLoop (float larg1, float larg2, SndObj *larg3, float larg4, int larg5, float larg6);
EXPORT void _wrap_delete_SndLoop (SndLoop *larg1);
EXPORT void _wrap_SndLoop_SetXFade (SndLoop *larg1, float larg2);
EXPORT void _wrap_SndLoop_SetPitch (SndLoop *larg1, float larg2);
EXPORT void _wrap_SndLoop_ReSample (SndLoop *larg1);
EXPORT int _wrap_SndLoop_Set (SndLoop *larg1, char *larg2, float larg3);
EXPORT int _wrap_FIR_Connect (FIR *larg1, char *larg2, void *larg3);
EXPORT int _wrap_FIR_Set (FIR *larg1, char *larg2, float larg3);
EXPORT FIR *_wrap_new_Fir_empty ();
EXPORT FIR *_wrap_new_FIR (Table *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT FIR *_wrap_new_FIR_impulse (float *larg1, int larg2, SndObj *larg3, int larg4, float larg5);
EXPORT void _wrap_delete_FIR (FIR *larg1);
EXPORT void _wrap_FIR_SetTable (FIR *larg1, Table *larg2);
EXPORT void _wrap_FIR_SetImpulse (FIR *larg1, float *larg2, int larg3);
EXPORT void _wrap_FIR_SetDelayTime (FIR *larg1, float larg2);
EXPORT Filter *_wrap_new_Filter_empty ();
EXPORT Filter *_wrap_new_Filter (float larg1, float larg2, SndObj *larg3, int larg4, float larg5);
EXPORT void _wrap_delete_Filter (Filter *larg1);
EXPORT void _wrap_Filter_SetFreq (Filter *larg1, float larg2);
EXPORT void _wrap_Filter_SetBW (Filter *larg1, float larg2);
EXPORT int _wrap_Filter_Set (Filter *larg1, char *larg2, float larg3);
EXPORT void _wrap_Filter_SetSr (Filter *larg1, float larg2);
EXPORT char *_wrap_Filter_ErrorMessage (Filter *larg1);
EXPORT TpTz *_wrap_new_TpTz_empty ();
EXPORT TpTz *_wrap_new_TpTz (double larg1, double larg2, double larg3, double larg4, double larg5, SndObj *larg6, int larg7, float larg8);
EXPORT void _wrap_delete_TpTz (TpTz *larg1);
EXPORT void _wrap_TpTz_SetParam (TpTz *larg1, double larg2, double larg3, double larg4, double larg5, double larg6);
EXPORT int _wrap_TpTz_Set (TpTz *larg1, char *larg2, float larg3);
EXPORT Reson *_wrap_new_Reson_empty ();
EXPORT Reson *_wrap_new_Reson (float larg1, float larg2, SndObj *larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_Reson_SetFreq (Reson *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_Reson_SetBW (Reson *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_delete_Reson (Reson *larg1);
EXPORT int _wrap_Reson_Connect (Reson *larg1, char *larg2, void *larg3);
EXPORT Lp *_wrap_new_Lp_empty ();
EXPORT Lp *_wrap_new_Lp (float larg1, float larg2, SndObj *larg3, SndObj *larg4, SndObj *larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Lp (Lp *larg1);
EXPORT void _wrap_Lp_SetSr (Lp *larg1, float larg2);
EXPORT int _wrap_Lp_Set (Lp *larg1, char *larg2, float larg3);
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);