lib/common-music/sa/cffi-sa.lisp


(defcfun ("_wrap_delete_Balance" delete_Balance) :void
  (self :sndobj_balance))

(defcfun ("_wrap_Balance_ErrorMessage" Balance_ErrorMessage) :string
  (self :sndobj_balance))

(defcfun ("_wrap_Balance_Connect" Balance_Connect) :int
  (self :sndobj_balance)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_DelayLine_empty" new_DelayLine_empty) :sndobj_delayLine)

(defcfun ("_wrap_new_DelayLine" new_DelayLine) :sndobj_delayLine
  (delaytime :float)
  (InObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_DelayLine" delete_DelayLine) :void
  (self :sndobj_delayLine))

(defcfun ("_wrap_DelayLine_Buffer" DelayLine_Buffer) :pointer
  (self :sndobj_delayLine))

(defcfun ("_wrap_DelayLine_GetWritePointerPos" DelayLine_GetWritePointerPos) :long
  (self :sndobj_delayLine))

(defcfun ("_wrap_DelayLine_GetDelayTime" DelayLine_GetDelayTime) :float
  (self :sndobj_delayLine))

(defcfun ("_wrap_DelayLine_SetSr" DelayLine_SetSr) :void
  (self :sndobj_delayLine)
  (sr :float))

(defcfun ("_wrap_DelayLine_Reset" DelayLine_Reset) :void
  (self :sndobj_delayLine))

(defcfun ("_wrap_DelayLine_SetDelayTime" DelayLine_SetDelayTime) :void
  (self :sndobj_delayLine)
  (delaytime :float))

(defcfun ("_wrap_DelayLine_Set" DelayLine_Set) :int
  (self :sndobj_delayLine)
  (mess :string)
  (value :float))

(defcfun ("_wrap_DelayLine_ErrorMessage" DelayLine_ErrorMessage) :string
  (self :sndobj_delayLine))

(defcfun ("_wrap_new_Tap_empty" new_Tap_empty) :sndobj_tap)

(defcfun ("_wrap_new_Tap" new_Tap) :sndobj_tap
  (delaytime :float)
  (DLine :sndobj_delayLine)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Tap" delete_Tap) :void
  (self :sndobj_tap))

(defcfun ("_wrap_Tap_SetDelayTime" Tap_SetDelayTime) :void
  (self :sndobj_tap)
  (delaytime :float))

(defcfun ("_wrap_Tap_SetDelayTap" Tap_SetDelayTap) :void
  (self :sndobj_tap)
  (DLine :sndobj_delayLine))

(defcfun ("_wrap_Tap_Set" Tap_Set) :int
  (self :sndobj_tap)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Tap_Connect" Tap_Connect) :int
  (self :sndobj_tap)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Tap_ErrorMessage" Tap_ErrorMessage) :string
  (self :sndobj_tap))

(defcfun ("_wrap_new_Tapi_empty" new_Tapi_empty) :sndobj_tapi)

(defcfun ("_wrap_new_Tapi" new_Tapi) :sndobj_tapi
  (delayinput :sndobj)
  (DLine :sndobj_delayLine)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Tapi" delete_Tapi) :void
  (self :sndobj_tapi))

(defcfun ("_wrap_Tapi_SetDelayInput" Tapi_SetDelayInput) :void
  (self :sndobj_tapi)
  (delayinput :sndobj))

(defcfun ("_wrap_Tapi_Connect" Tapi_Connect) :int
  (self :sndobj_tapi)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Comb_empty" new_Comb_empty) :sndobj_comb)

(defcfun ("_wrap_new_Comb" new_Comb) :sndobj_comb
  (gain :float)
  (delaytime :float)
  (InObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Comb" delete_Comb) :void
  (self :sndobj_comb))

(defcfun ("_wrap_Comb_SetGain" Comb_SetGain) :void
  (self :sndobj_comb)
  (gain :float))

(defcfun ("_wrap_Comb_Set" Comb_Set) :int
  (self :sndobj_comb)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Allpass_empty" new_Allpass_empty) :sndobj_allpass)

(defcfun ("_wrap_new_Allpass" new_Allpass) :sndobj_allpass
  (gain :float)
  (delaytime :float)
  (InObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Allpass" delete_Allpass) :void
  (self :sndobj_allpass))

(defcfun ("_wrap_new_StringFlt_empty" new_StringFlt_empty) :sndobj_stringflt)

(defcfun ("_wrap_new_StringFlt" new_StringFlt) :sndobj_stringflt
  (fr :float)
  (fdbgain :float)
  (inObj :sndobj)
  (InFrObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_StringFlt_decay" new_StringFlt_decay) :sndobj_stringflt
  (fr :float)
  (inObj :sndobj)
  (decay :float)
  (InFrObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_StringFlt" delete_StringFlt) :void
  (self :sndobj_stringflt))

(defcfun ("_wrap_StringFlt_SetSr" StringFlt_SetSr) :void
  (self :sndobj_stringflt)
  (sr :float))

(defcfun ("_wrap_StringFlt_SetDecay" StringFlt_SetDecay) :void
  (self :sndobj_stringflt)
  (decay :float))

(defcfun ("_wrap_StringFlt_SetFreq" StringFlt_SetFreq) :void
  (self :sndobj_stringflt)
  (fr :float)
  (InFrObj :sndobj))

(defcfun ("_wrap_StringFlt_SetFdbgain" StringFlt_SetFdbgain) :void
  (self :sndobj_stringflt)
  (fdbgain :float))

(defcfun ("_wrap_StringFlt_Set" StringFlt_Set) :int
  (self :sndobj_stringflt)
  (mess :string)
  (value :float))

(defcfun ("_wrap_StringFlt_Connect" StringFlt_Connect) :int
  (self :sndobj_stringflt)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Pluck_empty" new_Pluck_empty) :sndobj_pluck)

(defcfun ("_wrap_new_Pluck" new_Pluck) :sndobj_pluck
  (fr :float)
  (amp :float)
  (fdbgain :float)
  (InFrObj :sndobj)
  (maxscale :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Pluck_decay" new_Pluck_decay) :sndobj_pluck
  (fr :float)
  (amp :float)
  (InFrObj :sndobj)
  (decay :float)
  (maxscale :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Pluck" delete_Pluck) :void
  (self :sndobj_pluck))

(defcfun ("_wrap_Pluck_RePluck" Pluck_RePluck) :void
  (self :sndobj_pluck))

(defcfun ("_wrap_Pluck_Set" Pluck_Set) :int
  (self :sndobj_pluck)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Pluck_SetAmp" Pluck_SetAmp) :void
  (self :sndobj_pluck)
  (amp :float)
  (maxscale :float))

(defcfun ("_wrap_new_VDelay_empty" new_VDelay_empty) :sndobj_vdelay)

(defcfun ("_wrap_new_VDelay" new_VDelay) :sndobj_vdelay
  (maxdelaytime :float)
  (fdbgain :float)
  (fwdgain :float)
  (dirgain :float)
  (InObj :sndobj)
  (InVdtime :sndobj)
  (InFdbgain :sndobj)
  (InFwdgain :sndobj)
  (InDirgain :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_VDelay_delaytime" new_VDelay_delaytime) :sndobj_vdelay
  (maxdelaytime :float)
  (delaytime :float)
  (fdbgain :float)
  (fwdgain :float)
  (dirgain :float)
  (InObj :sndobj)
  (InVdtime :sndobj)
  (InFdbgain :sndobj)
  (InFwdgain :sndobj)
  (InDirgain :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_VDelay" delete_VDelay) :void
  (self :sndobj_vdelay))

(defcfun ("_wrap_VDelay_Set" VDelay_Set) :int
  (self :sndobj_vdelay)
  (mess :string)
  (value :float))

(defcfun ("_wrap_VDelay_Connect" VDelay_Connect) :int
  (self :sndobj_vdelay)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_VDelay_SetMaxDelayTime" VDelay_SetMaxDelayTime) :void
  (self :sndobj_vdelay)
  (MaxDelaytime :float))

(defcfun ("_wrap_VDelay_SetDelayTime" VDelay_SetDelayTime) :void
  (self :sndobj_vdelay)
  (delaytime :float))

(defcfun ("_wrap_VDelay_SetVdtInput" VDelay_SetVdtInput) :void
  (self :sndobj_vdelay)
  (InVdtime :sndobj))

(defcfun ("_wrap_VDelay_SetFdbgain" VDelay_SetFdbgain) :void
  (self :sndobj_vdelay)
  (fdbgain :float)
  (InFdbgain :sndobj))

(defcfun ("_wrap_VDelay_SetFwdgain" VDelay_SetFwdgain) :void
  (self :sndobj_vdelay)
  (fwdgain :float)
  (InFwdgain :sndobj))

(defcfun ("_wrap_VDelay_SetDirgain" VDelay_SetDirgain) :void
  (self :sndobj_vdelay)
  (dirgain :float)
  (InDirgain :sndobj))

(defcfun ("_wrap_new_Pitch_empty" new_Pitch_empty) :sndobj_pitch)

(defcfun ("_wrap_new_Pitch" new_Pitch) :sndobj_pitch
  (delaytime :float)
  (InObj :sndobj)
  (pitch :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Pitch_semitones" new_Pitch_semitones) :sndobj_pitch
  (delaytime :float)
  (InObj :sndobj)
  (semitones :int)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Pitch" delete_Pitch) :void
  (self :sndobj_pitch))

(defcfun ("_wrap_Pitch_SetPitch" Pitch_SetPitch) :void
  (self :sndobj_pitch)
  (pitch :float))

(defcfun ("_wrap_Pitch_SetPitch_semitones" Pitch_SetPitch_semitones) :void
  (self :sndobj_pitch)
  (semitones :int))

(defcfun ("_wrap_Pitch_Set" Pitch_Set) :int
  (self :sndobj_pitch)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_SndLoop_empty" new_SndLoop_empty) :pointer)

(defcfun ("_wrap_new_SndLoop" new_SndLoop) :pointer
  (xfadetime :float)
  (looptime :float)
  (InObj :sndobj)
  (pitch :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndLoop" delete_SndLoop) :void
  (self :pointer))

(defcfun ("_wrap_SndLoop_SetXFade" SndLoop_SetXFade) :void
  (self :pointer)
  (xfadetime :float))

(defcfun ("_wrap_SndLoop_SetPitch" SndLoop_SetPitch) :void
  (self :pointer)
  (pitch :float))

(defcfun ("_wrap_SndLoop_ReSample" SndLoop_ReSample) :void
  (self :pointer))

(defcfun ("_wrap_SndLoop_Set" SndLoop_Set) :int
  (self :pointer)
  (mess :string)
  (value :float))

(defcfun ("_wrap_FIR_Connect" FIR_Connect) :int
  (self :pointer)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_FIR_Set" FIR_Set) :int
  (self :pointer)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Fir_empty" new_Fir_empty) :pointer)

(defcfun ("_wrap_new_FIR" new_FIR) :pointer
  (coeftable :sndobj_table)
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_FIR_impulse" new_FIR_impulse) :sndobj_fir
  (impulse :float*)
  (impulsesize :int)
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_FIR" delete_FIR) :void
  (self :sndobj_fir))

(defcfun ("_wrap_FIR_SetTable" FIR_SetTable) :void
  (self :sndobj_fir)
  (coeftable :sndobj_table))

(defcfun ("_wrap_FIR_SetImpulse" FIR_SetImpulse) :void
  (self :sndobj_fir)
  (impulse :float*)
  (impulsesize :int))

(defcfun ("_wrap_FIR_SetDelayTime" FIR_SetDelayTime) :void
  (self :sndobj_fir)
  (dtime :float))

(defcfun ("_wrap_new_Filter_empty" new_Filter_empty) :sndobj_filter)

(defcfun ("_wrap_new_Filter" new_Filter) :sndobj_filter
  (fr :float)
  (bw :float)
  (inObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Filter" delete_Filter) :void
  (self :sndobj_filter))

(defcfun ("_wrap_Filter_SetFreq" Filter_SetFreq) :void
  (self :sndobj_filter)
  (fr :float))

(defcfun ("_wrap_Filter_SetBW" Filter_SetBW) :void
  (self :sndobj_filter)
  (bw :float))

(defcfun ("_wrap_Filter_Set" Filter_Set) :int
  (self :sndobj_filter)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Filter_SetSr" Filter_SetSr) :void
  (self :sndobj_filter)
  (sr :float))

(defcfun ("_wrap_Filter_ErrorMessage" Filter_ErrorMessage) :string
  (self :sndobj_filter))

(defcfun ("_wrap_new_TpTz_empty" new_TpTz_empty) :sndobj_tptz)

(defcfun ("_wrap_new_TpTz" new_TpTz) :sndobj_tptz
  (a :double)
  (a1 :double)
  (a2 :double)
  (b1 :double)
  (b2 :double)
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_TpTz" delete_TpTz) :void
  (self :sndobj_tptz))

(defcfun ("_wrap_TpTz_SetParam" TpTz_SetParam) :void
  (self :sndobj_tptz)
  (a :double)
  (a1 :double)
  (a2 :double)
  (b1 :double)
  (b2 :double))

(defcfun ("_wrap_TpTz_Set" TpTz_Set) :int
  (self :sndobj_tptz)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Reson_empty" new_Reson_empty) :sndobj_reson)

(defcfun ("_wrap_new_Reson" new_Reson) :sndobj_reson
  (fr :float)
  (bw :float)
  (inObj :sndobj)
  (inputfreq :sndobj)
  (inputbw :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_Reson_SetFreq" Reson_SetFreq) :void
  (self :sndobj_reson)
  (fr :float)
  (InFrObj :sndobj))

(defcfun ("_wrap_Reson_SetBW" Reson_SetBW) :void
  (self :sndobj_reson)
  (bw :float)
  (InBWObj :sndobj))

(defcfun ("_wrap_delete_Reson" delete_Reson) :void
  (self :sndobj_reson))

(defcfun ("_wrap_Reson_Connect" Reson_Connect) :int
  (self :sndobj_reson)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Lp_empty" new_Lp_empty) :sndobj_lp)

(defcfun ("_wrap_new_Lp" new_Lp) :sndobj_lp
  (fr :float)
  (BW :float)
  (inObj :sndobj)
  (inputfreq :sndobj)
  (inputBW :sndobj)
  (vecisize :int)
  (sr :float))

(defcfun ("_wrap_delete_Lp" delete_Lp) :void
  (self :sndobj_lp))

(defcfun ("_wrap_Lp_SetSr" Lp_SetSr) :void
  (self :sndobj_lp)
  (sr :float))

(defcfun ("_wrap_Lp_Set" Lp_Set) :int
  (self :sndobj_lp)
  (mess :string)
  (value :float))
